syntax = "proto3";
package pb; //pode ser qq nome mas esse é o mais comum usado pela comunidade
option go_package = "internal/pb"; //pasta onde serão gerados os proto

message Blank {}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryList {
    repeated Category categories = 1;
}

message CategoryRequest {
    string id = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList) {}
    rpc CreateCategoryStreamBidirecional(stream CreateCategoryRequest) returns (stream Category) {}
    rpc ListCategories(Blank) returns (CategoryList) {}
    rpc GetCategory(CategoryRequest) returns (Category) {}
}
